--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   fluttertoast: ^8.0.9
   email_validator: ^2.1.16
   google_sign_in: ^5.4.0
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
