--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.1.0
   fluttertoast: ^8.0.9
+  cloud_firestore: ^3.1.9
 
 dev_dependencies:
   flutter_test:
