--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.1.0
-  fluttertoast: ^8.0.9
   cloud_firestore: ^3.1.9
+  firebase: ^9.0.3
+  firebase_auth: ^3.3.8
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
