--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase: ^9.0.3
   firebase_auth: ^3.3.8
   fluttertoast: ^8.0.9
+  email_validator: ^2.1.16
 
 dev_dependencies:
   flutter_test:
