--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   provider: ^6.0.3
   open_street_map_search_and_pick: ^0.0.9
   convex_bottom_bar: ^3.0.0
+  flutter_map: ^2.2.0
+  location: ^4.4.0
 
 dev_dependencies:
   flutter_test:
