--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   convex_bottom_bar: ^3.0.0
   path_provider: ^2.0.11
   image_picker: ^0.8.5+3
+  location: ^4.4.0
 
 dev_dependencies:
   flutter_test:
