--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   path_provider: ^2.0.11
   image_picker: ^0.8.5+3
   location: ^4.4.0
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
