--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   location: ^4.4.0
   http: ^0.13.5
   shared_preferences: ^2.0.15
+  flutter_launcher_icons: ^0.10.0
+
 
 dev_dependencies:
   flutter_test:
