add bottom sheet dans la map

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   http: ^0.13.5
   shared_preferences: ^2.0.15
   flutter_launcher_icons: ^0.10.0
+  modal_bottom_sheet: ^2.1.0
 
 
 dev_dependencies:
