--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   shared_preferences: ^2.0.15
   flutter_launcher_icons: ^0.10.0
   modal_bottom_sheet: ^2.1.0
+  firebase_storage: ^10.3.6
 
 
 dev_dependencies:
