--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   firebase_storage: ^10.3.6
   share_plus: ^4.0.10+1
   url_launcher: ^6.1.5
+  flutter_slidable: ^2.0.0
 
 
 dev_dependencies:
