--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   share_plus: ^4.0.10+1
   url_launcher: ^6.1.5
   flutter_slidable: ^2.0.0
+  flutter_cache_manager: ^3.3.0
 
 
 dev_dependencies:
