--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   url_launcher: ^6.1.5
   flutter_slidable: ^2.0.0
   flutter_cache_manager: ^3.3.0
+  rflutter_alert: ^2.0.4
 
 
 dev_dependencies:
